# data_science_project_v2

./: .gitignore  pyproject.toml
images/: __init__.py  google_image.py  local_image.py  pillowable_image.py  web_image.py
resources/google_cloud_services/: __init__.py  google_image_annotator.py  google_storage.py  google_storage_bucket.py
security/google_cloud_credentials/: __init__.py  google_cloud_credentials.py  local_google_cloud_credentials.py
services/objects_localization/: __init__.py  google_vision.py  objects_localization.py
